[package]
name = "sea-orm-adapter"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true
description = "Sea ORM adapter for casbin-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true, default-features = false }
casbin = { workspace = true, default-features = false }
sea-orm = { workspace = true, default-features = false, features = ["macros"] }

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["full"] }

[features]
default = ["postgres", "runtime-tokio-rustls"]

#databases
mysql = ["sea-orm/sqlx-mysql"]
postgres = ["sea-orm/sqlx-postgres"]
sqlite = ["sea-orm/sqlx-sqlite"]

# async runtime
# async-std
runtime-async-std-native-tls = [
    "casbin/runtime-async-std",
    "sea-orm/runtime-async-std-native-tls",
]
runtime-async-std-rustls = [
    "casbin/runtime-async-std",
    "sea-orm/runtime-async-std-rustls",
]
# tokio
runtime-tokio-native-tls = [
    "casbin/runtime-tokio",
    "sea-orm/runtime-tokio-native-tls",
]
runtime-tokio-rustls = ["casbin/runtime-tokio", "sea-orm/runtime-tokio-rustls"]
# actix (actually based on tokio)
runtime-actix-native-tls = [
    "casbin/runtime-tokio",
    "sea-orm/runtime-actix-native-tls",
]
runtime-actix-rustls = ["casbin/runtime-tokio", "sea-orm/runtime-actix-rustls"]
