[package]
name = "server-resource"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
askama_derive = { workspace = true }
convert_case = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
askama = { workspace = true }
